--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+#server
+server.port=8880
+server.servlet.context-path=/mysite6
 
+#view resolve
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+# devTools
+#자동 재시작 기능을 활성화하거나 비활성화합니다. 기본값은 true입니다.
+spring.devtools.livereload.enabled=true 
+#라이브 리로드 기능을 활성화하거나 비활성화합니다. 기본값은 true입니다.
+spring.devtools.restart.enabled=true
+
+# datasource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/web_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.username=web
+spring.datasource.password=web
+
+# mybatis
+mybatis.config-location=classpath:mybatis/configuration.xml
+
+
+#한글처리
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
